# local-assistant-examples

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  app.py  pyproject.toml  rag.py  run.sh  yyy.txt
llm-website-scraper/: scraper.py  test_crawl4ai.py
simple-rag/: README.md  app.py  rag.py  requirements.txt
