[tool.poetry]
name = "local-rag-example"
version = "0.1.0"
description = ""
authors = ["Duy Huynh <vndee.huynh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
openai = "^1.50.2"


[tool.poetry.group.simple-rag.dependencies]
langchain-community = "0.2.17"
streamlit = "^1.38.0"
streamlit-chat = "^0.1.1"
pypdf = "^5.0.0"
chromadb = "^0.5.7"
protobuf = "3.20.2"
fastembed = "^0.3.6"


[tool.poetry.group.common.dependencies]
pre-commit = "^3.8.0"


[tool.poetry.group.e2e-talking-assistant.dependencies]
moshi = "^0.1.0"


[tool.poetry.group.llm-website-scraper.dependencies]
playwright = "^1.47.0"
graphviz = "^0.20.3"
matplotlib = "^3.9.2"
networkx = "^3.3"
pydot = "^3.0.2"
pygraphviz = "^1.13"
beautifulsoup4 = "^4.12.3"
crawl4ai = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
